# orth-pipes-bench

./: .gitignore  LICENSE  README.md  benchmark.eps  docker-compose.yml  orth-pipes-bench.cabal  run  stack.yaml
plot/: plot.gnu  plot_pipe.gnu  plot_seq.gnu  transform.py
plot2/: deep-pipe_contpipe.tmp  deep-pipe_orth-pipes-no-unsafe-coerce.tmp  deep-pipe_orth-pipes-recursive-merge.tmp  deep-pipe_orth-pipes.tmp  deep-pipe_pipes.tmp  deep-seq_conduit.tmp  deep-seq_contpipe.tmp  deep-seq_orth-pipes-no-unsafe-coerce.tmp  deep-seq_orth-pipes-recursive-merge.tmp  deep-seq_orth-pipes.tmp  deep-seq_pipes.tmp  plot.gnu  plot_seq.gnu  primes_conduit.tmp  primes_contpipe.tmp  primes_orth-pipes-no-unsafe-coerce.tmp  primes_orth-pipes-recursive-merge.tmp  primes_orth-pipes.tmp  primes_pipes.tmp
scripts/: plot_micro.gnu  plot_micro_concat.gnu  plot_micro_filter.gnu  plot_micro_fold.gnu  plot_micro_map.gnu  plot_micro_mapM.gnu  plot_spivey_pipe.gnu  plot_spivey_primes.gnu  plot_spivey_seq.gnu  plot_yahoo.gnu  run-all  run-micro  run-spivey  run-yahoo  transform.py  transform_micro.py
src/: ConduitBench.hs  ContPipe.hs  ContPipeR.hs  ContTPipeR.hs  Main.hs  OrthPipes.hs  OrthPipesNoUnsafeCoerce.hs  OrthPipesRecursiveMerge.hs  PipesBench.hs  StreamlyBench.hs
src-micro/: Main.hs
src-spivey/: Main.hs
src-yahoo/: Bench.hs  EventRecord.hs  Insert.hs  Main.hs
src/Benchmarks/: Common.hs  Micro.hs  Spivey.hs
src/Representations/: Conduit.hs  ContPipe.hs  Loop.hs  OrthPipes.hs  Pipes.hs  Streamly.hs
