name:                orth-pipes-bench
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rubenpieters/orth-pipes-bench#readme
license:             BSD3
license-file:        LICENSE
author:              Ruben Pieters
maintainer:          rubenpietersgithub@gmail.com
copyright:           2018 Ruben Pieters
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

Library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2
  exposed-modules:     Representations.Pipes
                     , Representations.Conduit
                     , Representations.Streamly
                     , Representations.OrthPipes
                     , Representations.ContPipe
                     , Benchmarks.Common
                     , Benchmarks.Micro
                     , Benchmarks.Spivey
  build-depends:       base == 4.11.1.0
                     , pipes == 4.3.9
                     , transformers == 0.5.5.0
                     , criterion == 1.5.1.0
                     , conduit == 1.3.0.3
                     , streamly == 0.4.1
                     , deepseq


executable bench-spivey
  hs-source-dirs:      src
  main-is:             Benchmarks/Spivey.hs
  ghc-options:         -O2 -main-is Benchmarks.Spivey
  default-language:    Haskell2010
  other-modules:       Representations.Pipes
                     , Representations.Conduit
                     , Representations.Streamly
                     , Representations.OrthPipes
                     , Representations.ContPipe
                     , Benchmarks.Common
  build-depends:       base == 4.11.1.0
                     , pipes == 4.3.9
                     , transformers == 0.5.5.0
                     , criterion == 1.5.1.0
                     , conduit == 1.3.0.3
                     , streamly == 0.4.1
                     , orth-pipes-bench
                     , deepseq

executable bench-micro
  hs-source-dirs:      src
  main-is:             Benchmarks/Micro.hs
  ghc-options:         -O2 -main-is Benchmarks.Micro
  default-language:    Haskell2010
  other-modules:       Representations.Pipes
                     , Representations.Conduit
                     , Representations.Streamly
                     , Representations.OrthPipes
                     , Representations.ContPipe
                     , Benchmarks.Common
  build-depends:       base == 4.11.1.0
                     , pipes == 4.3.9
                     , transformers == 0.5.5.0
                     , criterion == 1.5.1.0
                     , conduit == 1.3.0.3
                     , streamly == 0.4.1
                     , orth-pipes-bench
                     , deepseq

executable bench-yahoo
  hs-source-dirs:      src-yahoo
  main-is:             Bench.hs
  ghc-options:         -O2 -main-is Bench
  default-language:    Haskell2010
  other-modules:       Insert
                     , EventRecord
  build-depends:       base == 4.11.1.0
                     , pipes == 4.3.9
                     , transformers == 0.5.5.0
                     , criterion == 1.5.1.0
                     , conduit == 1.3.0.3
                     , streamly == 0.4.1
                     , orth-pipes-bench
                     , hw-kafka-client
                     , text
                     , bytestring
                     , containers
                     , aeson
                     , hedis
                     , uuid
                     , unix-time
                     , QuickCheck

executable insert-yahoo
  hs-source-dirs:      src-yahoo
  main-is:             Insert.hs
  ghc-options:         -O2 -main-is Insert
  default-language:    Haskell2010
  other-modules:       Main
                     , EventRecord
  build-depends:       base == 4.11.1.0
                     , pipes == 4.3.9
                     , transformers == 0.5.5.0
                     , criterion == 1.5.1.0
                     , conduit == 1.3.0.3
                     , streamly == 0.4.1
                     , orth-pipes-bench
                     , hw-kafka-client
                     , text
                     , bytestring
                     , containers
                     , aeson
                     , hedis
                     , uuid
                     , unix-time
                     , QuickCheck